--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </li>
         </ul>
       </div>
-      <button class="translate-btn">Translate Text</button>
+      <button class="translate-btn">Translate</button>
     </div>
 
     <script src="js/countries.js"></script>
